2019-10-21  John D. Ramsdell  <ramsdell@mitre.org>

	* version.ml (version): Updated to 1.2.

2019-10-03  John D. Ramsdell  <ramsdell@mitre.org>

	* parser.mly, quant_printer.ml: Removed syntax that allows empty
	antecedents and consequences in quantifier syntax.

2019-09-26  John D. Ramsdell  <ramsdell@mitre.org>

	* parser.mly: Removed syntax that allows empty antecedents and
	consequences.

2019-09-22  John D. Ramsdell  <ramsdell@mitre.org>

	* chase.ml (run): Made reference to Main.margin field explicit
	because 4.09 introduced the Format.margin field.

2019-09-19  John D. Ramsdell  <ramsdell@mitre.org>

	* sym.ml (namings): Improved the asymptotic performance of
	printing contexts by using int maps for namings.

2019-09-18  John D. Ramsdell  <ramsdell@mitre.org>

	* parser.mly (form): Allowed formulas to omit the => operator when
	the antecedent of a formula is empty or true.

2019-08-20  John D. Ramsdell  <ramsdell@mitre.org>

	* version.ml (version): Updated to 1.1.

2019-07-17  John D. Ramsdell  <ramsdell@mitre.org>

	* unflatten.ml (make_subst): Fixed function so that unflatten
	followed by flattening is an isomorphism.

2019-06-19  John D. Ramsdell  <ramsdell@mitre.org>

	* sexpr_printer.ml (print_frame): Added a space after key "facts"
	in a structure.

2019-02-07  John D. Ramsdell  <ramsdell@mitre.org>

	* chase.ml (carefully_set_margin): Set the maximum margin when
	setting the margin so that line breaks occur only at break
	hints.  This fixes a bug in chasetree which caused facts to be
	printed in bold even when the fact is in the parent structure.

	The documentation in the standard library Format module is
	unhelpful about the need for this code.  A bug report has been
	submitted.

2019-01-29  John D. Ramsdell  <ramsdell@mitre.org>

	* chase.mk, chase.xhtml:  Added a makefile rule that preprocesses
	files with extension .glm using m4.  This allows file inclusion.

2019-01-17  John D. Ramsdell  <ramsdell@mitre.org>
